[package]
name = "knn-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "knn_rs"
crate-type = ["cdylib"]


[dependencies]
pyo3 = {version="0.16.5", features=["extension-module"]}
hdf5 = "0.8.1"
fastrand = "1.8.0"
ndarray = {version="0.15.6", features = ["serde"]}
numpy = "0.16"
rustc-hash = "1.1.0"
serde = {features = ["derive"]}
bincode = "1.3.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
